--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="footer__cta">
         <a href="#" class="button">Request Invite</a>
       </div>
-      <div class="footer__copyrights">
+      <div class="footer__copyright">
         &copy; Easybank. All Rights Reserved
       </div>
     </div>
